--- a/css/style.css
+++ b/css/style.css
@@ -54,19 +54,18 @@ body {
     font-size: 3.4rem;
 }
 
-.pantalla-principal .titulo .iconos-juego{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.pantalla-principal .titulo .iconos-juego .categoria-juego{
-    width: 4rem;
+.pantalla-principal .titulo .start-btn {
+    font-size: 1.5rem;
+    padding: 0.5rem 2rem;
     border-radius: 1rem;
-    margin: 1rem;
-    text-align: center;
+    border: none;
+    background: #000;
+    color: #DCC1B6;
+    box-shadow: rgba(0,0,0,0.35) 0rem 0.5rem 1.5rem;
+    margin-top: 1.5rem;
 }
 
-.pantalla-principal .titulo .iconos-juego .categoria-juego:hover {
-    background: #ccaca0;
+.pantalla-principal .titulo .start-btn:hover {
+    background: rgb(14, 14, 14);
+    transform: scale(1.1);
 }
