--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ body {
     color: #DCC1B6;
     box-shadow: rgba(0,0,0,0.35) 0rem 0.5rem 1.5rem;
     margin-top: 1.5rem;
+    cursor: pointer;
 }
 
 .pantalla-principal .titulo .start-btn:hover {
