--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,7 @@ body {
     margin-bottom: 0;
 }
 
-.option-list .option .icon {
+.quiz-box .question-section .option-list .option .icon {
     height: 2.6rem;
     width: 2.6rem;
     border: 0.2rem solid transparent;
@@ -242,16 +242,16 @@ body {
     pointer-events: none;
 }
 
-.option-list .option .icon.tick {
-    color: #23903C;
-    border-color: #23903C;
-    background: #D4EDDA;
+.quiz-box .question-section .option-list .option .icon.tick {
+    color: #155724;
+    border-color: #155724;
+    background: #B6E2C0;
 }
 
-.option-list .option .icon.cross {
-    color: #A42834;
-    background: #F8D7DA;
-    border-color: #A42834;
+.quiz-box .question-section .option-list .option .icon.cross {
+    color: #721C24;
+    background: #F5C6CB;
+    border-color: #721C24;
 }
 
 .quiz-box .question-section .option-list .option.correct{
